--- a/session02/03.html
+++ b/session02/03.html
@@ -13,13 +13,18 @@
 			align-items: center;
 		}
 		.transitioned{
-			transition: background-color 1s linear;
+			transition: border-radius 1s linear;
+		}
+		.transitioned:hover{
+			border-radius: 20px;
 		}
 		.transitioned2{
-			transition: border-radius 1s linear;
+			transition: border-radius 1s linear,
+						background-color 0.3s linear;
 		}
 		.transitioned2:hover{
 			border-radius: 20px;
+			background-color: #5e2750;
 		}
 	</style>
 </head>
