--- a/session02/02.html
+++ b/session02/02.html
@@ -12,14 +12,22 @@
 			justify-content: space-around;
 			align-items: center;
 		}
-		.transitioned{
-			transition: background-color 1s linear;
+		.animated:hover{
+			animation: flash 0.6s linear;
 		}
-		.transitioned2{
-			transition: border-radius 1s linear;
+		.animated2:hover{
+			animation: flash 1s linear;
 		}
-		.transitioned2:hover{
-			border-radius: 20px;
+		@keyframes flash {
+			0%{
+				background-color: #e30000;
+			}
+			30%{
+				background-color: white;
+			}
+			100%{
+				background-color: #900;
+			}
 		}
 	</style>
 </head>
@@ -28,11 +36,11 @@
 <div data-ws10-spritesheet="img/svg/sprite.mid.svg" data-ws10-js="spritesheet-loader"></div>
 
 <div class="playground">
-	<button type="button" name="cta" title="CTA" class="ws10-c-button transitioned">
-		Transition 1
+	<button type="button" name="cta" title="CTA" class="ws10-c-button animated">
+		Animation 1
 	</button>
-	<button type="button" name="cta" title="CTA" class="ws10-c-button transitioned2">
-		Transition 2
+	<button type="button" name="cta" title="CTA" class="ws10-c-button animated2">
+		Animation 2
 	</button>
 </div>
 <script src="js/ws10.js"></script>
